--- a/elloworld.ipynb
+++ b/elloworld.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7ccf6eec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as nipa"
+    "import numpy as nipa\n",
+    "hiamyola"
    ]
   }
  ],
